--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
 <html>
 <head>
-<title>Animations</title>
+<title>Document</title>
 <link rel="stylesheet" href="newstyle.css"/>
 </head>
 <body>
-<h1>Color animation</h1>
+<h2>Color animation</h2>
 <div class="colorchange"></div>
-<br>
-<br>
+
+<h2>Bouncing Ball on edges</h1>
 <div class="ball">
 <div class="bounce"></div>
 </div>
 <br>
 <br>
+<h2>Rotating Square</h2>
+<br>
 <div class ="square"></div>
+<h2>Rotating Polygon(Triangle)</h2>
+<svg class="triangle" height="200" width="200">
+  <polygon points="100,10 150,190 50,190"   />
+</svg>
+<h2>Circle moving along the X-axis</h2>
+<svg class="circle" height="500" width="500">
+<circle r="100" cx="100" cy="100">
+</svg>
+
 </body>
 </html>
